--- a/components/footer.html
+++ b/components/footer.html
@@ -1,5 +1,8 @@
 <footer>
-  <div class="footer-copy">© 2025 Heleen Evers. All rights reserved.</div>
+  <div class="footer-copy">
+    © 2025 Heleen Evers. All rights reserved. |
+    <a href="privacy.html">Privacy Notice</a>
+  </div>
   <div class="footer-social">
     <a href="https://linkedin.com/" target="_blank" title="LinkedIn">
       <i class="ri-linkedin-line"></i>
