Update readme + adjust Markdown settings, Run update-nav

--- a/templates/glitch-tests.html
+++ b/templates/glitch-tests.html
@@ -60,8 +60,15 @@
         <!-- Started Section -->
         <div class="section started">
           <div class="started-content">
-            <div class="h-title glitch-rgb" data-text="Heleen Evers">
-              Heleen Evers
+            <div
+              class="h-title glitch-rgb"
+              style="text-transform: none"
+              data-text="HelE*nDig"
+            >
+              <span style="text-transform: none"
+                >HelE<span style="font-family: var(--font-sans)">*</span
+                >nDig</span
+              >
             </div>
 
             <!-- Subtitle -->
