--- a/templates/glitch-tests.html
+++ b/templates/glitch-tests.html
@@ -63,12 +63,9 @@
             <div
               class="h-title glitch-rgb"
               style="text-transform: none"
-              data-text="HelE*nDig"
+              data-text="Heleen Evers"
             >
-              <span style="text-transform: none"
-                >HelE<span style="font-family: var(--font-sans)">*</span
-                >nDig</span
-              >
+              <span style="text-transform: none">Heleen Evers</span>
             </div>
 
             <!-- Subtitle -->
