--- a/templates/glitch-tests.html
+++ b/templates/glitch-tests.html
@@ -30,7 +30,16 @@
     />
 
     <!-- Favicon -->
-    <link rel="shortcut icon" href="/assets/images/favicons/favicon.ico" />
+    <link
+      rel="icon"
+      href="/assets/images/favicons/favicon-light.ico"
+      media="(prefers-color-scheme: light)"
+    />
+    <link
+      rel="icon"
+      href="/assets/images/favicons/favicon-dark.ico"
+      media="(prefers-color-scheme: dark)"
+    />
 
     <!-- Main CSS -->
     <link rel="stylesheet" href="/assets/css/style.css" />
@@ -61,7 +70,7 @@
         <div class="section started">
           <div class="started-content">
             <div
-              class="h-title glitch-rgb"
+              class="h-title glitch-effect"
               style="text-transform: none"
               data-text="Heleen Evers"
             >
@@ -82,10 +91,10 @@
       <div id="footer-container"></div>
 
       <!-- Border Lines -->
-      <div class="line top"></div>
-      <div class="line bottom"></div>
       <div class="line left"></div>
       <div class="line right"></div>
+      <div class="line top"></div>
+      <div class="line bottom"></div>
     </div>
 
     <!-- Sidebar placeholder -->
