--- a/components/footer.html
+++ b/components/footer.html
@@ -4,17 +4,35 @@
     <a href="privacy.html">Privacy Notice</a>
   </div>
   <div class="footer-social">
-    <a href="https://linkedin.com/" target="_blank" title="LinkedIn">
-      <i class="ri-linkedin-line"></i>
+    <a
+      href="https://linkedin.com/in/heleenevers/"
+      target="_blank"
+      title="LinkedIn"
+    >
+      <i class="ri-linkedin-fill"></i>
     </a>
-    <a href="https://youtube.com/" target="_blank" title="YouTube">
-      <i class="ri-youtube-line"></i>
+    <a href="https://youtube.com/@Heleendje" target="_blank" title="YouTube">
+      <i class="ri-youtube-fill"></i>
     </a>
-    <a href="https://github.com/" target="_blank" title="GitHub">
-      <i class="ri-github-line"></i>
+    <a href="https://vimeo.com/heleenevers" target="_blank" title="Vimeo">
+      <i class="ri-vimeo-fill"></i>
     </a>
-    <a href="https://instagram.com/" target="_blank" title="Instagram">
-      <i class="ri-instagram-line"></i>
+    <a href="https://github.com/HelEvX" target="_blank" title="GitHub">
+      <i class="ri-github-fill"></i>
+    </a>
+    <a
+      href="https://www.behance.net/heleenevers-PXL"
+      target="_blank"
+      title="Behance"
+    >
+      <i class="ri-behance-fill"></i>
+    </a>
+    <a
+      href="https://www.instagram.com/helsteendje/"
+      target="_blank"
+      title="Instagram"
+    >
+      <i class="ri-instagram-fill"></i>
     </a>
   </div>
 </footer>
