--- a/assets/css/single-post.css
+++ b/assets/css/single-post.css
@@ -8,10 +8,20 @@
   background: var(--color-white);
 }
 
-@media (max-width: 1200px) {
-  .blogpage .mouse_btn {
-    bottom: calc(100vh * 0.1);
-    color: var(--color-primary);
+/* BLOG TITLES */
+.section.started .started-content .h-title.blog_title {
+  font-size: 48px;
+}
+
+@media (max-width: 840px) {
+  .section.started .started-content .h-title.blog_title {
+    font-size: 40px;
+  }
+}
+
+@media (max-width: 480px) {
+  .section.started .started-content .h-title.blog_title {
+    font-size: 26px;
   }
 }
 
@@ -25,7 +35,7 @@
     linear-gradient(90deg, var(--color-bg-light) 1px, transparent 1px),
     linear-gradient(0deg, var(--color-bg-light) 1px, transparent 1px);
   background-color: var(--color-primary);
-  background-size: 95% auto, 35px 35px, 35px 35px; /*grid spacing*/
+  background-size: 95% auto, 28px 28px, 28px 28px; /*grid spacing*/
 
   /* Blend mode for paper texture effect */
   background-blend-mode: hard-light, normal, normal;
@@ -43,9 +53,9 @@
   -webkit-mask-repeat: no-repeat;
 }
 
-@media (max-width: 1200px) {
+@media (min-width: 1440px) {
   .section.started.blog-cover {
-    background-size: 95% auto, 28px 28px, 28px 28px; /* Smaller grid for mobile */
+    background-size: 95% auto, 35px 35px, 35px 35px;
 
     background-image: url("/assets/images/Texturelabs_Paper_187M_rotated90.jpg"),
       linear-gradient(90deg, var(--color-bg-light) 1px, transparent 1px),
@@ -112,11 +122,12 @@
 
 /* Sections */
 .section.blog {
-  margin-top: 35px;
+  margin-top: 65px;
 }
-@media (max-width: 1200px) {
+
+@media (min-width: 1440px) {
   .section.blog {
-    margin-top: 65px;
+    margin-top: 35px;
   }
 }
 
@@ -185,12 +196,6 @@ section a:hover {
   display: none;
 }
 
-@media (max-width: 960px) {
-  .project-table td {
-    padding: 0.8em 2.25em 0 0;
-  }
-}
-
 @media (max-width: 840px) {
   table.project-table {
     display: none;
@@ -205,6 +210,9 @@ section a:hover {
     padding: 0.8em 0;
     border-bottom: 1px solid var(--color-bg-light);
     gap: 40px;
+  }
+  .project-table td {
+    padding: 0.8em 2.25em 0 0;
   }
   .project-label {
     font-weight: 500;
